# offload

./: .dockerignore  .gitignore  .offload-image-cache  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  LICENSE  PLAN.md  POSITIONING.md  README.md  RUST_STYLE_GUIDE.md  STYLE_GUIDE.md  TESTING.md  deny.toml  install-skills.sh  justfile  justfile-rustbucket  manifest  offload-cargo-default.toml  offload-cargo-local.toml  offload-cargo-modal-copydir.toml  offload-cargo-modal.toml  offload-computronium-modal.toml  offload-fail-fast-test.toml  offload-history.jsonl  offload-local.toml  offload-modal.toml  offload-pytest-artifacts.toml  offload-pytest-default.toml  offload-pytest-local.toml  offload-pytest-modal.toml  offload-sculptor-modal.toml  offload.toml  pytest.ini  ratchet-counts.toml  ratchet.toml  ratchets.toml  rust-bucket.toml  rustfmt.toml  (+8 more)
.beads/: config.yaml  interactions.jsonl  issues.jsonl  last-touched  metadata.json
.config/: nextest.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml  review-bot-setup.sh
docs/: allocation-optimization.html  test-affinity.md
examples/: Dockerfile
plans/: allocation-optimization.md  checkpoint-images.md  checkpoint-images.plan.md  checkpoint-images.spec.md  current-image-flow.html  diffy-patch-application.spec.md  fastvm-poc.plan.md  fastvm-poc.spec.md  post-patch-cmd.spec.md  provider-retry-logic.md  test-history-storage.md  validate-thin-diff.md
scripts/: azure_orbital_sandbox.py  modal-create-computronium.py  modal-create-rust.py  modal-create-sculptor.py  modal-create.py  (+4 more)
(+110 files in other folders)
